Fix ReadingList toolbar on iPhone X

On iPhone X, the safe area is cutting the bottom and sides of the
device. The bottom toolbar needs to take it into account to be
correctly displayed on iPhone X.

Bug: 764917
Change-Id: I71a839d77e8fdbd273e5fca6daee99c0800d5395
Reviewed-on: https://chromium-review.googlesource.com/668536
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Jean-François Geyelin <jif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502537}
Former-commit-id: 1b79a4148712592f2c5bf9e6837d2e8987e02e5f